--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
 #showcase {
   position: relative;
   background-image: url(../img/mountains.jpg);
+  background-repeat: no-repeat;
   min-height: 600px; }
   #showcase .primary-overlay {
     background-color: rgba(50, 146, 166, 0.8);
@@ -20,3 +21,20 @@ body {
     left: 0;
     width: 100%;
     height: 100%; }
+
+.info-header {
+  width: 50%;
+  margin: auto;
+  border-bottom: 1px solid #ddd; }
+
+.pointer {
+  cursor: pointer; }
+
+@media (max-width: 768px) {
+  #showcase {
+    min-height: 500px; }
+    #showcase h1 {
+      font-size: 3.4rem; }
+
+  .mb-resp {
+    margin-bottom: 1rem; } }
