--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,6 +19,7 @@ body {
 #showcase {
   position: relative;
   background-image: url(../img/mountains.jpg);
+  background-repeat: no-repeat;
   min-height: 600px;
 
   .primary-overlay {
@@ -28,5 +29,29 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
+  }
+}
+
+.info-header {
+  width: 50%;
+  margin: auto;
+  border-bottom: 1px solid #ddd;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  #showcase {
+    min-height: 500px;
+
+    h1 {
+      font-size: 3.4rem;
+    }
+  }
+
+  .mb-resp {
+    margin-bottom: 1rem;
   }
 }
