--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,14 @@ body {
 .pointer {
   cursor: pointer; }
 
+#authors img {
+  margin-top: -50px; }
+#authors .card:hover {
+  background-color: #3292a6;
+  color: #fff; }
+  #authors .card:hover .fab {
+    color: #fff; }
+
 @media (max-width: 768px) {
   #showcase {
     min-height: 500px; }
