--- a/scss/style.scss
+++ b/scss/style.scss
@@ -42,6 +42,21 @@ body {
   cursor: pointer;
 }
 
+#authors {
+  img {
+    margin-top: -50px;
+  }
+
+  .card:hover {
+    background-color: $primary;
+    color: #fff;
+
+    .fab {
+      color: #fff;
+    }
+  }
+}
+
 @media (max-width: 768px) {
   #showcase {
     min-height: 500px;
